--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
 </head>
 
 <body>
-  <div class="card-container"></div>
+  <div class="card-container">
+    <div class="container-elements">
+      <img class="img-element" src="./images/image-qr-code.png" alt="QR-CODE-IMAGE">
+      <div class="text-elements">
+        <h1> Improve your front-end skills by building projects </h1>
+        <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
